--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 * {
-  margin: 0%;
-  padding: 0%;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
+body::-webkit-scrollbar {
+  display: none;
 }
 
+
+html,
+body {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  /* overflow-x: hidden; */
+}
 
 ::placeholder {
   color: #f8f8f8 !important;
@@ -31,12 +38,34 @@ body {
   height: 100%;
   z-index: 1;
   overflow: hidden;
+  display: block;
+}
+
+.container,
+.alert {
+  background-color: black !important;
 }
 
 .video-bg video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
+  background-color: black;
+}
+
+.video-main {
+  position: relative;
+  height: 85vh;
+  overflow: hidden;
+  margin-bottom: .9px;
+  padding-top: 1rem;
+  z-index: 2;
+}
+
+section.container-fluid {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+  background: black !important;
 }
 
 .navbar,
@@ -44,14 +73,42 @@ body {
   background: transparent !important;
 }
 
-.video-main {
-  position: relative;
-  height: 400px; /* jitni aapko chahiye */
-  overflow: hidden;
-  z-index: 2;
-}
 
 .hero-content {
   position: relative;
   z-index: 2;
+}
+
+#bars{
+  border-bottom: 1px solid #f8f8f8;
+}
+
+#bars h5{
+  font-family: sans-serif;
+  color: aliceblue !important ;
+}
+
+
+@media (max-width: 643px) {
+  .video-bg {
+    height: 100vh;
+  }
+  .video-bg video {
+    min-height: 100vh;
+    min-width: 100vw;
+    object-fit: cover;
+  }
+}
+
+@media (max-width: 768px) {
+  .gs-logo-scroll {
+    flex-wrap: nowrap !important;
+    overflow-x: auto;
+    gap: 1rem;
+    justify-content: flex-start !important;
+    -webkit-overflow-scrolling: touch;
+  }
+  .gs-logo-scroll .gs_logo_single--inner {
+    flex: 0 0 auto;
+  }
 }
