--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ section.container-fluid {
 #bars h5{
   font-family: sans-serif;
   color: aliceblue !important ;
+  background: linear-gradient(270deg, red, orange, yellow, green, cyan, blue, violet, red);
+  background-size: 400% 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rgbEffect 10s linear infinite;
 }
 
 
@@ -104,7 +109,7 @@ section.container-fluid {
 }
 
 
-.swiper-wrapper{
+.swiper-wrapper , .container-fluid{
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE/Edge */
   scroll-behavior: smooth;
@@ -121,16 +126,6 @@ section.container-fluid {
 
 }
 
-@media (max-width: 643px) {
-  .video-bg {
-    height: 100vh;
-  }
-  .video-bg video {
-    min-height: 100vh;
-    min-width: 100vw;
-    object-fit: cover;
-  }
-}
 
 
 .post-ql{
@@ -154,17 +149,107 @@ section.container-fluid {
   font-size: 12px;
   padding: 4px;
 }
+.video-about{
+  width: 35rem;
+  font-size: 22px;
+  padding: 5px;
+  margin: 2px;
+  z-index: 2;
+  top: 40%;
+  left: 3%;
+  color: white;
+  font-weight: 700;
+}
 
+.vid-text {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-family: 'sans-serif';
+  color: cyan !important;
+}
 
+.video-about h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+  font-family: 'sans-serif';
+  
+}
 
+.video-about p {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  word-break: break-word;
+  display: block;
+  text-align: start;
+  color: #fff;
+  margin: 0 auto;
+  max-width: 100%;
+  padding: 0 8px;
+}
+
+.video-watch {
+  background-color: #81c3de;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  margin-top: 2%;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.video-watch:hover {
+  background-color: greenyellow;
+  color: white;
+  transform: scale(1.05);
+}
+
+@keyframes rgbEffect {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
+
+@media (max-width: 576px) {
+  .video-about {
+    width: 100% !important;
+    font-size: 1rem !important;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 0.5rem 0.5rem;
+  }
+  .video-about p {
+    font-size: 1rem !important;
+    word-break: break-word;
+    text-align: start;
+  }
+}
+
+@media (max-width: 643px) {
+  .video-bg {
+    height: 100vh;
+  }
+  .video-bg video {
+    min-height: 100vh;
+    min-width: 100vw;
+    object-fit: cover;
+  }
+}
 
 @media (max-width: 768px) {
-  .gs-logo-scroll {
+  .gs-logo-scroll , .gs_logo_single--inner{
     flex-wrap: nowrap !important;
     overflow-x: auto;
     gap: 1rem;
     justify-content: flex-start !important;
     -webkit-overflow-scrolling: touch;
+    overflow-x: auto;
   }
   .gs-logo-scroll .gs_logo_single--inner {
     flex: 0 0 auto;
